--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@
 .video-background {
   @apply fixed top-0 left-0 w-full h-full -z-10 object-cover;
 }
+
+.balloon {
+  @apply bg-[#161616] rounded-t-[10px];
+}
