--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,24 @@
 .balloon {
   @apply bg-[#161616] rounded-t-[10px];
 }
+
+@font-face {
+  font-family: "KCCChassam";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/KCCChassam.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "JeonjuCraftMjB";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/JeonjuCraftMjB.woff2")
+    format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Goddess-of-Fortune";
+  src: url(./fonts/Goddess-of-Fortune.ttf);
+}
